[package]
name = "discord"
version = "0.8.0"
authors = ["Tad Hardesty <tad@platymuus.com>"]

description = "Client library for the Discord API"
readme = "README.md"
license = "MIT"
keywords = ["discord", "chat", "bot", "api", "voice"]

repository = "https://github.com/SpaceManiac/discord-rs"
documentation = "https://docs.rs/discord/0.8.0"

[features]
default = ["voice"]
voice = ["opus", "sodiumoxide"]

[dependencies]
hyper = "0.10"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bitflags = "0.7"
byteorder = "0.5"
time = "0.1"
log = "0.3"
base64-rs = "0.1.1"
flate2 = "0.2.14"
opus = { version = "0.2", optional = true }

[dependencies.chrono]
version = "0.3"
features = ["serde"]

[dependencies.sodiumoxide]
version = "0.0.12"
default-features = false
optional = true

[dependencies.websocket]
version = "0.20"
default-features = false
features = ["sync", "sync-ssl"]

[dependencies.multipart]
version = "0.13"
default-features = false
features = ["hyper", "client", "safemem"]
